Mobile search working

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,2 @@
-	<script src="../javascripts/dhtmlx.js"></script>
-	
-	<link rel="stylesheet" type="text/css" href="../javascripts/dhtmlx.css">
-	<link rel="stylesheet" type="text/css" href="../javascripts/dhtmlx_custom.css">
-
-	<style>
-	html, body {
-		width: 100%;
-		height: 100%;
-		margin: 0px;
-		overflow: hidden;
-	}
-    </style>
-
-<script type="text/javascript" charset="utf-8">
-</script>
-
-</head>
 <body onload="doOnLoad()">
+</body>
