--- a/app/views/layouts/standard_application.html.erb
+++ b/app/views/layouts/standard_application.html.erb
@@ -6,9 +6,10 @@
 		<%= javascript_include_tag :defaults %>
 		<%= csrf_meta_tag %>
 	
+		<script src="../javascripts/standard_application.js"></script>
 		<script src="../javascripts/dhtmlx.js"></script>
 		<script type="text/javascript" charset="utf-8"></script>
-			
+		
 		<link rel="stylesheet" type="text/css" href="../javascripts/dhtmlx.css">
 		<link rel="stylesheet" type="text/css" href="../javascripts/dhtmlx_custom.css">
 	
