Web client now functions indepenantly using web sotre

--- a/app/views/layouts/standard_application.html.erb
+++ b/app/views/layouts/standard_application.html.erb
@@ -5,7 +5,9 @@
 		<%= stylesheet_link_tag :all %>
 		<%= javascript_include_tag :defaults %>
 		<%= csrf_meta_tag %>
-	
+
+		<script src="../javascripts/webtoolkit.base64.js"></script>
+		<script src="../javascripts/uuid.js"></script>
 		<script src="../javascripts/standard_application.js"></script>
 		<script src="../javascripts/dhtmlx.js"></script>
 		<script type="text/javascript" charset="utf-8"></script>
